--- a/spring_semi_project/src/main/resources/templates/student/enroll.html
+++ b/spring_semi_project/src/main/resources/templates/student/enroll.html
@@ -30,13 +30,13 @@
                                 <tr th:if="${#lists.size(lists)} > 0" th:each="course:${lists}">
                                     <td scope="row" th:text="${course.courseCode}"></td>
                                     <td th:text="${course.courseName}"></td>
-                                    <td th:text="${course.professor.professorName}"></td>
+                                    <td th:text="${course.professor.name}"></td>
                                     <td th:text="${course.courseDay.get(0)} + ' ' + ${course.startTime} + ' - ' + ${course.endTime}"></td>
                                     <td th:text="${course.classroom}"></td>
                                     <td th:text="${course.restSeat} + '/' + ${course.maxStudent}"></td>
                                     <td th:text="${course.subject.subjectTitle} + ' / ' + ${course.classification}"></td>
                                     <td>
-                                        <a th:href="">신청</a>
+                                        신청
                                     </td>
                                 </tr>
 
