--- a/spring_semi_project/src/main/resources/templates/fragments/sidebar.html
+++ b/spring_semi_project/src/main/resources/templates/fragments/sidebar.html
@@ -7,13 +7,15 @@
         </div>
         <div class="user-designation">
             <span th:text="${session.univ}"></span>
-            <span class="user-designation" th:if="${session.role} == 'staff'">(교직원)</span>
-            <span class="user-designation" th:if="${session.role} == 'professor'">(교수)</span>
-            <span class="user-designation" th:if="${session.role} == 'student'">(학생)</span>
+            <span class="user-designation" th:if="${session.role} == 'Staff'">(교직원)</span>
+            <span class="user-designation" th:if="${session.role} == 'Professor'">(교수)</span>
+            <span class="user-designation" th:if="${session.role} == 'Student'">(학생)</span>
         </div>
 
         <div class="user-name" th:text="${session.nickname} + ' 님'"></div>
-        <button type="button" class="btn btn-dark" onclick="location.href = '/logout';">로그아웃</button>
+        <button type="button" class="btn btn-dark" onclick="location.href = '/logout';">
+            로그아웃
+        </button>
     </div>
     <ul class="nav">
         <li class="nav-item">
@@ -30,7 +32,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/myInfo">
                             개인정보 수정
                         </a>
                     </li>
