--- a/spring_semi_project/src/main/resources/templates/student/myInfo.html
+++ b/spring_semi_project/src/main/resources/templates/student/myInfo.html
@@ -3,154 +3,198 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 
-<div layout:fragment="content" class="col-12 grid-margin">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title" th:text="${member.name}">Horizontal Two column</h4>
-            <form class="form-sample">
-                <p class="card-description">
-                    Personal info
-                </p>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">First Name</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Last Name</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Gender</label>
-                            <div class="col-sm-9">
-                                <select class="form-control">
-                                    <option>Male</option>
-                                    <option>Female</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Date of Birth</label>
-                            <div class="col-sm-9">
-                                <input class="form-control" placeholder="dd/mm/yyyy"/>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Category</label>
-                            <div class="col-sm-9">
-                                <select class="form-control">
-                                    <option>Category1</option>
-                                    <option>Category2</option>
-                                    <option>Category3</option>
-                                    <option>Category4</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Membership</label>
-                            <div class="col-sm-4">
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="membershipRadios" id="membershipRadios1" value="" checked>
-                                        Free
-                                    </label>
+<div layout:fragment="content" class="content-wrapper">
+    <ul class="nav">
+    <li class="col-12 grid-margin nav-item">
+        <div class="card">
+            <div class="card-body">
+                <a class="nav-link" data-toggle="collapse" href="#recordForm" aria-expanded="false" aria-controls="ui-basic">
+                    <h4 class="card-title">개인정보 수정 - 학적정보</h4>
+                </a>
+                <form name="recordForm" method="post" action="/updateRecord" class="collapse show" id="recordForm">
+                    <hr>
+                    <p class="card-description">
+                        학적정보
+                    </p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">소속대학</label>
+                                <div class="col-sm-9">
+                                    <input type="text" name="univName" class="form-control" th:value="${member.univName}" readonly />
                                 </div>
                             </div>
-                            <div class="col-sm-5">
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="radio" class="form-check-input" name="membershipRadios" id="membershipRadios2" value="option2">
-                                        Professional
-                                    </label>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">학번</label>
+                                <div class="col-sm-9">
+                                    <input type="text" name="id" class="form-control" th:value="${member.id}" readonly />
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <p class="card-description">
-                    Address
-                </p>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Address 1</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">이름</label>
+                                <div class="col-sm-9">
+                                    <input type="text" name="name" class="form-control" th:value="${member.name}" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">생일</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" th:value="${member.birth}" disabled />
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">State</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">이메일</label>
+                                <div class="col-sm-9">
+                                    <input type="text" name="email" class="form-control" th:value="${member.email}" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">전화번호</label>
+                                <div class="col-sm-9">
+                                    <input type="text" name="phone" class="form-control" placeholder="###-####-####" th:value="${member.phone}" />
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Address 2</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
+                    <div class="row">
+                        <div class="col-5"></div>
+                        <div class="col-2" style="display: flex; justify-content: center;">
+                            <button class="btn btn-primary solid blank mt-3" type="button" onclick="beforeSubmit(); return false;">
+                                수정
+                            </button>
                         </div>
+                        <div class="col-5"></div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Postcode</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">City</label>
-                            <div class="col-sm-9">
-                                <input type="text" class="form-control" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Country</label>
-                            <div class="col-sm-9">
-                                <select class="form-control">
-                                    <option>America</option>
-                                    <option>Italy</option>
-                                    <option>Russia</option>
-                                    <option>Britain</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
+    </li>
+
+    <li class="col-12 grid-margin nav-item">
+        <div class="card">
+            <div class="card-body">
+                <a class="nav-link" data-toggle="collapse" href="#loginInfo" aria-expanded="false" aria-controls="ui-basic">
+                    <h4 class="card-title">개인정보 수정 - 로그인 정보</h4>
+                </a>
+                <div class="collapse" id="loginInfo">
+                    <hr>
+                    <p class="card-description">
+                        닉네임 변경
+                    </p>
+                    <form class="row" method="post" action="/updateNickname">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">닉네임</label>
+                                <div class="col-sm-9 input-group">
+                                    <input type="text" name="nickname" class="form-control" th:value="${session.nickname}" />
+                                    <div class="input-group-append">
+                                        <button class="btn btn-sm btn-primary" type="submit">변경</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6"></div>
+                    </form>
+
+                    <hr>
+                    <p class="card-description">
+                        비밀번호 변경/초기화
+                    </p>
+                    <form class="row">
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">비밀번호 변경</label>
+                                <div class="col-sm-9">
+                                    <input type="password" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">비밀번호 확인</label>
+                                <div class="col-sm-9">
+                                    <input type="password" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="row">
+                        <div class="col-5"></div>
+                        <div class="col-2" style="display: flex; justify-content: center;">
+                            <button class="btn btn-primary solid blank mt-3" type="button" onclick="beforeSubmit(); return false;">
+                                수정
+                            </button>
+                        </div>
+                        <div class="col-5"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+    </ul>
 </div>
+
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+        function beforeSubmit() {
+            const f = document.recordForm;
+
+            const name = f.name.value;
+            const email = f.email.value;
+            const phone = f.phone.value;
+
+            if (name.trim() === '') {
+                alert('이름을 작성해주세요');
+                return;
+            }
+
+            if (email.trim() === '') {
+                alert('이메일을 작성해주세요');
+                return;
+            }
+
+            if (!isValidEmail(email)) {
+                alert('이메일 주소의 형식이 올바르지 않습니다.');
+                return;
+            }
+
+            if (phone.trim() === '') {
+                alert('전화번호를 작성해주세요');
+                return;
+            }
+
+            if (!isValidPhone(phone)) {
+                alert('전화번호 형식이 올바르지 않습니다.\n###-####-####의 형식으로 입력해주세요');
+                return;
+            }
+
+            f.submit();
+        }
+
+        function isValidEmail(email) {
+            const emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+            return emailRegex.test(email);
+        }
+
+        function isValidPhone(phone) {
+            const phoneRegex = /^\d{3}-\d{4}-\d{4}$/;
+            return phoneRegex.test(phone);
+        }
+    </script>
+</th:block>
 
 </html>
