--- a/spring_semi_project/src/main/resources/templates/fragments/sidebar.html
+++ b/spring_semi_project/src/main/resources/templates/fragments/sidebar.html
@@ -46,7 +46,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="pages/charts/chartjs.html">
+            <a class="nav-link" href="/timeTable">
                 <i class="icon-pie-graph menu-icon"></i>
                 <span class="menu-title">시간표보기</span>
             </a>
