--- a/spring_semi_project/src/main/resources/templates/student/enroll.html
+++ b/spring_semi_project/src/main/resources/templates/student/enroll.html
@@ -34,7 +34,8 @@
                                     <td th:text="${course.restSeat} + '/' + ${course.maxStudent}"></td>
                                     <td th:text="${course.subject.subjectTitle} + ' / ' + ${course.classification}"></td>
                                     <td>
-                                        <button class="btn btn-primary solid blank mt-3"
+                                        <button class="btn solid blank mt-3"
+                                                th:style="'background-color: ' + ${session.symbolColor} + '; border-color: '+ ${session.symbolColor} + '; color: white;'"
                                                 th:majorCode="${course.majorCode}"
                                                 th:courseCode="${course.courseCode}"
                                                 th:onclick="applyForCourse(this.getAttribute('majorCode'), this.getAttribute('courseCode')); return false;">
