--- a/expenseTracker/src/main/resources/templates/fragments/sidebar.html
+++ b/expenseTracker/src/main/resources/templates/fragments/sidebar.html
@@ -11,11 +11,11 @@
       <div class="profile-desc">
         <div class="profile-pic">
           <div class="count-indicator">
-            <img class="img-xs rounded-circle " src="assets/images/faces/face15.jpg" alt="">
+            <img class="img-xs rounded-circle" th:src="@{/images/faces/face15.jpg}" alt="">
             <span class="count bg-success"></span>
           </div>
           <div class="profile-name">
-            <h5 class="mb-0 font-weight-normal">Henry Klein</h5>
+            <h5 class="mb-0 font-weight-normal" sec:authentication="principal.name"></h5>
             <span>Gold Member</span>
           </div>
         </div>
@@ -35,7 +35,7 @@
           <a href="#" class="dropdown-item preview-item">
             <div class="preview-thumbnail">
               <div class="preview-icon bg-dark rounded-circle">
-                <i class="mdi mdi-onepassword  text-info"></i>
+                <i class="mdi mdi-onepassword text-info"></i>
               </div>
             </div>
             <div class="preview-item-content">
@@ -68,20 +68,12 @@
       </a>
     </li>
     <li class="nav-item menu-items">
-      <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+      <a class="nav-link" href="/view/calendar">
         <span class="menu-icon">
           <i class="mdi mdi-calendar-multiple-check"></i>
         </span>
         <span class="menu-title">달력</span>
-        <i class="menu-arrow"></i>
       </a>
-      <div class="collapse" id="ui-basic">
-        <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
-          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
-        </ul>
-      </div>
     </li>
     <li class="nav-item menu-items">
       <a class="nav-link" href="pages/forms/basic_elements.html">
@@ -92,12 +84,20 @@
       </a>
     </li>
     <li class="nav-item menu-items">
-      <a class="nav-link" href="pages/tables/basic-table.html">
+      <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <span class="menu-icon">
           <i class="mdi mdi-settings"></i>
         </span>
         <span class="menu-title">설정/관리</span>
+        <i class="menu-arrow"></i>
       </a>
+      <div class="collapse" id="ui-basic">
+        <ul class="nav flex-column sub-menu">
+          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/dropdowns.html">Dropdowns</a></li>
+          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+        </ul>
+      </div>
     </li>
   </ul>
 </nav>
