--- a/expenseTracker/src/main/resources/templates/index.html
+++ b/expenseTracker/src/main/resources/templates/index.html
@@ -24,6 +24,11 @@
       background: white;
       color: black;
     }
+
+    #dtlModal select, #dtlModal input, #dtlModal textarea {
+      border: 1px solid black;
+      color: black;
+    }
   </style>
 </th:block>
 
@@ -54,8 +59,7 @@
               </thead>
               <tbody class="table-group-divider">
               <tr th:each="item, status : ${items.getContent()}"
-                  th:if="${item.category.type != null}"
-                  th:style="${item.category.type == T(com.expenseTracker.constant.Type).INCOME ? 'color: #007bff;' : 'color: red;'}"
+                  th:style="${item.category.type != null && item.category.type == T(com.expenseTracker.constant.Type).INCOME ? 'color: #007bff;' : 'color: red;'}"
                   class="clickable-row" th:onclick="'displayData(\'' + ${item.id} + '\');'">
                 <td th:text="${@dateTimeFormatterUtil.formatLocalDateTime(item.date)}"></td>
                 <td th:text="${item.asset.name}"></td>
@@ -94,7 +98,7 @@
     </div>
 
     <div class="floating-button">
-      <button type="button" onclick="$('#date').val(getTodayDate()); $('#myModal').modal('show');"
+      <button type="button" onclick="$('#date').val(getTodayDate()); $('#insertModal').modal('show');"
               class="btn btn-dribbble btn-rounded btn-icon">
         <i class="mdi mdi-plus"></i>
       </button>
@@ -103,58 +107,71 @@
     <!-- Modal -->
     <div id="dtlModal" class="modal" tabindex="-1">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <form class="modal-content" action="/transaction/delete" method="post" name="deleteForm">
           <div class="modal-header">
             <h5 class="modal-title">상세 정보</h5>
             <button type="button" style="border: none;" class="btn-close" onclick="$('#dtlModal').modal('hide')" aria-label="Close">X</button>
           </div>
           <div class="modal-body">
-            <div class="form-group">
+            <input type="hidden" name="id" class="displayId" />
+            <div class="form-group dataTables_wrapper">
               <label>유형:</label>
-              <p id="displayTType"></p>
+              <select class="form-select displayType" disabled>
+                <option value="income">수입</option>
+                <option value="expense">지출</option>
+              </select>
             </div>
             <div class="form-group">
               <label>날짜:</label>
-              <p id="displayTDate"></p>
+              <input type="date" class="form-control displayDate" readonly="readonly">
             </div>
-            <div class="form-group">
+            <div class="form-group dataTables_wrapper">
               <label>자산:</label>
-              <p id="displayTAsset"></p>
+              <select class="form-select displayAsset" disabled>
+                <option th:each="a : ${assets}" th:text="${a.name}" th:value="${a.id}"></option>
+              </select>
             </div>
-            <div class="form-group">
+            <div class="form-group dataTables_wrapper">
               <label>카테고리:</label>
-              <p id="displayTCategory"></p>
+              <select class="form-select displayCategory" disabled>
+                <option th:each="c : ${incomeCategories}" th:text="${c.name}" th:value="${c.id}"></option>
+                <option th:each="c : ${expenseCategories}" th:text="${c.name}" th:value="${c.id}"></option>
+              </select>
             </div>
             <div class="form-group">
               <label>금액:</label>
-              <p id="displayTAmount"></p>
+              <input type="text" class="form-control displayAmountWithWon" readonly="readonly">
             </div>
             <div class="form-group">
               <label>내용:</label>
-              <p id="displayTDescription"></p>
+              <textarea class="form-control displayDescription" readonly="readonly"></textarea>
             </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary enableEditBtn" onclick="enableEdit()">수정</button>
-            <button type="button" class="btn btn-secondary deleteBtn">삭제</button>
+            <button type="button" onclick="if (confirm('정말로 삭제하시겠습니까?')) document.deleteForm.submit();"
+                    class="btn btn-secondary deleteBtn">삭제</button>
           </div>
-        </div>
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        </form>
       </div>
     </div>
 
-    <div id="myModal" class="modal" tabindex="-1">
+    <div id="insertModal" class="modal" tabindex="-1">
       <div class="modal-dialog">
-        <form class="modal-content" th:object="${transactionFormDto}" name="transactionForm">
+        <form class="modal-content" th:object="${transactionFormDto}" name="insertForm">
           <div class="modal-header">
             <h5 class="modal-title">거래 추가</h5>
-            <button type="button" style="border: none;" class="btn-close" onclick="$('#myModal').modal('hide')" aria-label="Close">X</button>
+            <button type="button" style="border: none;" class="btn-close" onclick="$('#insertModal').modal('hide')" aria-label="Close">X</button>
           </div>
           <div class="modal-body">
+            <input type="hidden" th:field="*{id}" />
+            <input type="hidden" name="member" th:value="${member}" />
             <div class="form-group dataTables_wrapper">
-              <label>유형:</label>
+              <label for="type">유형:</label>
               <select id="type" class="form-select" style="color: white;">
                 <option value="income">수입</option>
-                <option value="expense">지출</option>
+                <option value="expense" selected>지출</option>
               </select>
             </div>
             <div class="form-group">
@@ -170,7 +187,7 @@
             <div class="form-group dataTables_wrapper">
               <label th:for="category">카테고리:</label>
               <select class="form-select" th:field="*{category}" style="color: white;">
-                <option th:each="c : ${incomeCategories}" th:text="${c.name}" th:value="${c.id}"></option>
+                <option th:each="c : ${expenseCategories}" th:text="${c.name}" th:value="${c.id}"></option>
               </select>
             </div>
             <div class="form-group">
@@ -183,7 +200,59 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" onclick="beforeSubmit()" class="btn btn-primary">저장</button>
+            <button type="button" onclick="submitData(document.insertForm, '/transaction/insert', '등록에 성공했습니다.');" class="btn btn-primary">저장</button>
+          </div>
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        </form>
+      </div>
+    </div>
+
+    <div id="editModal" class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <form class="modal-content" name="editForm">
+          <div class="modal-header">
+            <h5 class="modal-title">내역 수정</h5>
+            <button type="button" style="border: none;" class="btn-close" onclick="$('#editModal').modal('hide')" aria-label="Close">X</button>
+          </div>
+          <div class="modal-body">
+            <input type="hidden" name="id" class="displayId" />
+            <input type="hidden" name="member" th:value="${member}" />
+            <div class="form-group dataTables_wrapper">
+              <label for="edit_type">유형:</label>
+              <select id="edit_type" class="form-select displayType" style="color: white;">
+                <option value="income">수입</option>
+                <option value="expense">지출</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="edit_date">날짜:</label>
+              <input type="date" class="form-control displayDate" name="date" id="edit_date">
+            </div>
+            <div class="form-group dataTables_wrapper">
+              <label for="edit_asset">자산:</label>
+              <select class="form-select displayAsset" name="asset" id="edit_asset" style="color: white;">
+                <option th:each="a : ${assets}" th:text="${a.name}" th:value="${a.id}"></option>
+              </select>
+            </div>
+            <div class="form-group dataTables_wrapper">
+              <label for="edit_category">카테고리:</label>
+              <select class="form-select displayCategory" id="edit_category" name="category" style="color: white;">
+                <option th:each="c : ${incomeCategories}" th:text="${c.name}" th:value="${c.id}"></option>
+                <option th:each="c : ${expenseCategories}" th:text="${c.name}" th:value="${c.id}"></option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="edit_amount">금액:</label>
+              <input type="text" class="form-control displayAmount" name="amount" id="edit_amount"
+                     onkeyup="inputNumberFormat(this)" style="border: 1px solid gray;">
+            </div>
+            <div class="form-group">
+              <label for="edit_description">내용:</label>
+              <textarea class="form-control displayDescription" name="description" id="edit_description"></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" onclick="submitData(document.editForm, '/transaction/edit', '수정에 성공했습니다.');" class="btn btn-primary">수정</button>
           </div>
           <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         </form>
@@ -203,49 +272,45 @@
 
   // yyyy-MM-dd 형식으로 날짜를 변환하는 함수
   function formatDate(date) {
-      const year = date.getFullYear();
-      const month = String(date.getMonth() + 1).padStart(2, '0');
-      const day = String(date.getDate()).padStart(2, '0');
-      return `${year}-${month}-${day}`;
+    const year = date.getFullYear();
+    const month = String(date.getMonth() + 1).padStart(2, '0');
+    const day = String(date.getDate()).padStart(2, '0');
+    return `${year}-${month}-${day}`;
   }
 
   // 오늘 날짜를 가져오는 함수
   function getTodayDate() {
-      var today = new Date();
-      return formatDate(today);
+    var today = new Date();
+    return formatDate(today);
   }
 
   // 수입과 지출 선택마다 다른 option
-  $('#type').change(function() {
+  $('#type, #edit_type').change(function() {
     var selectedType = $(this).val();
+    var targetCategory = $(this).attr('id') === 'type' ? '#category' : '#edit_category';
+    var categories = selectedType === 'income' ? [[${incomeCategories}]] : [[${expenseCategories}]];
 
-    if (selectedType === 'income') {
-        $('#category').empty();
-        $.each([[${incomeCategories}]], function(index, category) {
-            $('#category').append('<option value="' + category.id + '">' + category.name + '</option>'); // 수입 카테고리 옵션 추가
-        });
-    } else if (selectedType === 'expense') {
-        $('#category').empty();
-        $.each([[${expenseCategories}]], function(index, category) {
-            $('#category').append('<option value="' + category.id + '">' + category.name + '</option>'); // 지출 카테고리 옵션 추가
-        });
-    }
-  })
+    $(targetCategory).empty();
+    $.each(categories, function(index, category) {
+      $(targetCategory).append('<option value="' + category.id + '">' + category.name + '</option>');
+    });
+  });
 
   // 천단위 콤마 찍는 함수
   function inputNumberFormat(obj) {
-      let value = obj.value; // 입력한 가격
-      value = Number(value.replaceAll(',', '')); // 콤마를 제거
-      if (isNaN(value)) {
-          obj.value = 0; // 숫자가 아니면 0으로 바꾼다
-      } else {
-          const formatValue = value.toLocaleString('ko-KR');
-          obj.value = formatValue;
-      }
+    let value = obj.value; // 입력한 가격
+    value = Number(value.replaceAll(',', '')); // 콤마를 제거
+
+    if (isNaN(value)) {
+      obj.value = 0; // 숫자가 아니면 0으로 바꾼다
+    } else {
+      const formatValue = value.toLocaleString('ko-KR');
+      obj.value = formatValue;
+    }
   }
 
-  // myModal 초기화
-  $('#myModal').on('hide.bs.modal', function() {
+  // insertModal 초기화
+  $('#insertModal').on('hide.bs.modal', function() {
     $('#type, #asset, #category').each(function() {
       $(this).val($(this).find('option:first').val());
     });
@@ -253,59 +318,62 @@
     $('#amount, #description').val('');
   })
 
-  // insert
-  function beforeSubmit() {
-      const f = document.transactionForm;
+  // 서버에 전달할 데이터 설정
+  function setParamData(form) {
+    let amount = form.amount.value;
+    form.amount.value = Number(amount.replaceAll(',', '')); // 콤마 제거
 
-      let amount = f.amount.value;
-      f.amount.value = Number(amount.replaceAll(',', '')); // 콤마 제거
-
-      // 서버에 전달할 데이터
-      var paramData = {
-        member : f.member.value,
-        date : f.date.value,
-        description : f.description.value,
-        amount : f.amount.value,
-        asset : f.asset.value,
-        category : f.category.value
-      }
-
-      $.ajax({
-        url: '/transaction/insert',
-        type: 'POST',
-        data: paramData, // 직렬화한 Form 데이터를 전송한다.
-        beforeSend : function(xhr) {
-		  // 데이터를 전송하기 전에 헤더에 csrf 토큰을 설정
-		  xhr.setRequestHeader(header, token);
-		},
-        success: function (response) {
-          alert('등록에 성공했습니다.');
-          $('#myModal').modal('hide'); // 모달 닫기
-          location.reload(); // 페이지 리로드
-        },
-        error: function (jqXHR, status, error) {
-          alert(jqXHR.responseText);
-        }
-      });
+    return {
+      id : form.id.value,
+      member : form.member.value,
+      date : form.date.value,
+      description : form.description.value,
+      amount : form.amount.value,
+      asset : form.asset.value,
+      category : form.category.value
+    }
   }
 
-  // 세부정보
+  function submitData(form, url, successMessage) {
+    const paramData = setParamData(form);
+
+    $.ajax({
+      url: url,
+      type: 'POST',
+      data: paramData, // 직렬화한 Form 데이터를 전송한다.
+      beforeSend : function(xhr) {
+        xhr.setRequestHeader(header, token);
+      },
+      success: function (response) {
+        alert(successMessage);
+        $(form).closest('.modal').modal('hide');
+        location.reload();
+      },
+      error: function (xhr, status, error) {
+        alert(xhr.responseText);
+      }
+    });
+  }
+
+  // 내역 조회
   function displayData(itemId) {
     $.ajax({
       url: "/transaction/view/" + itemId,
       method: "GET",
       success: function(response) {
-        $('#displayTType').text(response.category.type == "INCOME" ? '수입' : '지출');
-        $('#displayTDate').text(formatDate(new Date(response.date)));
-        $('#displayTAmount').text(response.amount);
-        $('#displayTDescription').text(response.description);
-        $('#displayTAsset').text(response.asset.name);
-        $('#displayTCategory').text(response.category.name);
+        $('.displayId').val(response.id);
+        $('.displayType').val(response.category.type == "INCOME" ? 'income' : 'expense');
+        $('.displayDate').val(formatDate(new Date(response.date)));
+        $('.displayAmountWithWon').val(response.amount.toLocaleString('ko-KR') + '원');
+        $('.displayAmount').val(response.amount.toLocaleString('ko-KR'));
+        $('.displayDescription').val(response.description);
+        $('.displayAsset').val(response.asset.id);
+        $('.displayCategory').val(response.category.id);
 
         $('#dtlModal').modal('show');
       },
       error: function(xhr, status, error) {
-        alert(jqXHR.responseText);
+        alert(xhr.responseText);
       }
     });
   }
@@ -313,7 +381,7 @@
   // 수정 버튼 누르면
   function enableEdit() {
     $('#dtlModal').modal('hide');
-    $('#myModal').modal('show');
+    $('#editModal').modal('show');
   }
 </script>
 </th:block>
