--- a/expenseTracker/src/main/resources/static/css/calendar.css
+++ b/expenseTracker/src/main/resources/static/css/calendar.css
@@ -166,10 +166,14 @@ body {
   margin: 0 1px;
 }
 
+.red { background: rgba(255, 99, 71, 1) }
 .blue { background: rgba(156, 202, 235, 1); }
 .orange { background: rgba(247, 167, 0, 1); }
+.coral { background: rgba(255, 127, 80, 1); }
 .green { background: rgba(153, 198, 109, 1); }
+.lime { background: rgba(0, 255, 0, 1); }
 .yellow { background: rgba(249, 233, 0, 1); }
+.lavender { rgba(230, 230, 250, 1); }
 
 .details {
   position: relative;
