--- a/expenseTracker/src/main/resources/templates/fragments/sidebar.html
+++ b/expenseTracker/src/main/resources/templates/fragments/sidebar.html
@@ -70,7 +70,7 @@
     <li class="nav-item menu-items">
       <a class="nav-link" href="/view/calendar">
         <span class="menu-icon">
-          <i class="mdi mdi-calendar-multiple-check"></i>
+          <i class="mdi mdi-calendar-check"></i>
         </span>
         <span class="menu-title">달력</span>
       </a>
@@ -93,7 +93,7 @@
       </a>
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
+          <li class="nav-item"> <a class="nav-link" href="/settings/assets">자산 설정</a></li>
           <li class="nav-item"> <a class="nav-link" href="/settings/categories">카테고리 설정</a></li>
           <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
         </ul>
