--- a/expenseTracker/src/main/resources/templates/index.html
+++ b/expenseTracker/src/main/resources/templates/index.html
@@ -267,26 +267,22 @@
   if(errorMessage != null || errorMessage == "") alert(errorMessage);
 
   $(document).ready(function() {
-      // 초기 데이터 로드
-      loadInitialData();
+      var currentPath = window.location.pathname;
 
-      // 페이지 버튼 클릭 시 데이터 로드
-      $(document).on("click", ".page-link", function(event) {
-          event.preventDefault();
-          var page = $(this).data("page");
-          loadItems(page);
-      });
+      if (currentPath == "/") {
+        loadInitialData(); // 초기 데이터 로드
+      } else {
+        loadItems(currentPath.replace("/", ""));
+      }
   });
 
   function loadInitialData() {
-      // 페이지 로딩 시 초기 데이터 로드
       $.ajax({
           url: "/loadItems",
           method: "GET",
           success: function(data) {
-              // 성공적으로 데이터를 받아온 경우 처리
-              // 예를 들어, 받아온 데이터를 테이블에 출력하는 등의 작업 수행
               renderItems(data); // 데이터를 렌더링하는 함수 호출
+              renderPagination(data); // 페이징 버튼 데이터 렌더링
           },
           error: function(jqXHR, textStatus, errorThrown) {
               // 데이터를 받아오지 못한 경우 에러 처리
@@ -296,15 +292,13 @@
   }
 
   function loadItems(page) {
-      // 페이지 버튼 클릭 시 추가 데이터 로드
       $.ajax({
-          url: "/loadItems",
+          url: "/loadItems/" + page,
           method: "GET",
-          data: { page: page },
+          contentType : "application/json",
           success: function(data) {
-              // 성공적으로 데이터를 받아온 경우 처리
-              // 예를 들어, 받아온 데이터를 테이블에 추가하는 등의 작업 수행
-              renderItems(data); // 데이터를 렌더링하는 함수 호출
+              renderItems(data); // 테이블 데이터를 렌더링
+              renderPagination(data); // 페이징 버튼 데이터 렌더링
           },
           error: function(jqXHR, textStatus, errorThrown) {
               // 데이터를 받아오지 못한 경우 에러 처리
@@ -340,6 +334,47 @@
           // 테이블에 행 추가
           tableBody.append(row);
       });
+  }
+
+  // 페이지 버튼을 동적으로 생성하는 함수
+  function renderPageButtons(start, end) {
+    var paginationUl = $("<ul></ul>").addClass("pagination d-flex justify-content-center");
+    for (var i = start; i <= end; i++) {
+      var liClass = (i === start) ? "page-item disabled" : "page-item";
+      var aClass = (i === start) ? "page-link" : "page-link clickable-page";
+      var li = $("<li></li>").addClass(liClass);
+      var a = $("<a></a>")
+                .addClass(aClass)
+                .attr("href", "#")
+                .attr("data-page", i - 1) // 페이지 번호는 0부터 시작하므로 1을 빼줌
+                .text(i);
+      li.append(a);
+      paginationUl.append(li);
+    }
+    return paginationUl;
+  }
+
+  function renderPagination(data) {
+    var paginationContainer = $(".pagination-container");
+    paginationContainer.empty();
+
+    var maxPage = 5; // 최대 페이지 수
+    var totalPages = data.totalPages;
+    var currentPage = data.number + 1; // 페이지 번호는 0부터 시작하므로 1을 더해줌
+    var start = Math.max(1, currentPage - Math.floor(maxPage / 2));
+    var end = Math.min(totalPages, start + maxPage - 1);
+
+    var prevLi = $("<li></li>").addClass("page-item").addClass(currentPage === 1 ? "disabled" : "");
+    var prevLink = $("<a></a>").addClass("page-link").attr("href", "#").attr("data-page", currentPage - 2).text("이전");
+    prevLi.append(prevLink);
+
+    var nextLi = $("<li></li>").addClass("page-item").addClass(currentPage === totalPages ? "disabled" : "");
+    var nextLink = $("<a></a>").addClass("page-link").attr("href", "#").attr("data-page", currentPage).text("다음");
+    nextLi.append(nextLink);
+
+    paginationContainer.append(prevLi);
+    paginationContainer.append(renderPageButtons(start, end));
+    paginationContainer.append(nextLi);
   }
 
   // ★ 헤더에 있는 토큰 값을 가지고 온다. (반드시 같이 전송해야 함)
@@ -457,6 +492,7 @@
   // 수정 버튼 누르면
   function enableEdit() {
     $('#dtlModal').modal('hide');
+    $("#edit_type").trigger("change");
     $('#editModal').modal('show');
   }
 </script>
